syntax = "proto3";

package proto;

service DDIMonitor{
    rpc StartDNS(StartDNSRequest) returns (DDIMonitorResponse) {}
    rpc StartDHCP(StartDHCPRequest) returns (DDIMonitorResponse) {}
    rpc StopDNS(StopDNSRequest) returns (DDIMonitorResponse) {}
    rpc StopDHCP(StopDHCPRequest) returns (DDIMonitorResponse) {}
    rpc GetDNSState(GetDNSStateRequest) returns (DDIStateResponse) {}
    rpc GetDHCPState(GetDHCPStateRequest) returns (DDIStateResponse) {}
    rpc GetInterfaces(GetInterfacesRequest) returns (GetInterfacesResponse) {}
    rpc ReconfigDNS(ReconfigDNSRequest) returns (DDIMonitorResponse) {}
    rpc ReloadDNSConfig(ReloadDNSConfigRequest) returns (DDIMonitorResponse) {}
    rpc AddDNSZone(AddDNSZoneRequest) returns (DDIMonitorResponse) {}
    rpc UpdateDNSZone(UpdateDNSZoneRequest) returns (DDIMonitorResponse) {}
    rpc DeleteDNSZone(DeleteDNSZoneRequest) returns (DDIMonitorResponse) {}
    rpc DumpDNSAllZonesConfig(DumpDNSAllZonesConfigRequest) returns (DDIMonitorResponse) {}
    rpc DumpDNSZoneConfig(DumpDNSZoneConfigRequest) returns (DDIMonitorResponse) {}
    rpc ReloadNginxConfig(ReloadNginxConfigRequest) returns (DDIMonitorResponse) {}
}

message StartDNSRequest {}

message StartDHCPRequest{}

message StopDNSRequest {}

message StopDHCPRequest{}

message DDIMonitorResponse {
    bool succeed = 1;
}

message GetDNSStateRequest {}

message GetDHCPStateRequest {}

message DDIStateResponse {
    bool is_running = 1;
}

message GetInterfacesRequest {}

message GetInterfacesResponse {
    repeated string interfaces4 = 1;
    repeated string interfaces6 = 2;
}

message ReconfigDNSRequest {}

message ReloadDNSConfigRequest{}

message Zone {
    string zone_name = 1;
    string view_name = 2;
    string zone_file = 3;
    string zone_role = 4;
    string zone_masters = 5;
    string zone_slaves = 6;
}

message AddDNSZoneRequest{
    Zone zone = 1;
}

message UpdateDNSZoneRequest{
    Zone zone = 1;
}

message DeleteDNSZoneRequest{
    string zone_name = 1;
    string view_name = 2;
}

message DumpDNSAllZonesConfigRequest{}

message DumpDNSZoneConfigRequest{
    string zone_name = 1;
    string view_name = 2;
}

message ReloadNginxConfigRequest{}
